# speakers-dashboard

./: .black.sh  .githooks.ini  .gitignore  manage.py  pyproject.toml  requirements.txt  todo.md
presentation_manager/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  utils.py  validators.py  views.py
presentation_manager/formats/: __init__.py  formats.py
presentation_manager/migrations/: 0001_initial.py  0002_auto_20190617_2209.py  0003_auto_20190618_2006.py  0004_auto_20190709_2024.py  0005_auto_20190714_1629.py  0006_presentation_format.py  0007_auto_20190714_1852.py  0008_presentation_order.py  0009_auto_20190714_2219.py
presentation_manager/templates/presentation_manager/: manage_presentation.html  presentation_list.html
speakers_dashboard/: settings.py  urls.py  wsgi.py
templates/registration/: login.html
utils/: html_utils.py  menus.py  tests.py  urls.py  views.py
utils/templates/utils/: base.html  home.html  navbar.html
