[tool.poetry]
name = "speakers-dashboard"
version = "0.1.0"
description = ""
authors = ["Mateusz Krainski <mateusz@krainski.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "<3.0.0"
django-admin-sortable2 = "<2.0.0"
django-extensions = "^3.1.5"
django-crispy-forms = "^1.14.0"
django-simple-menu = "^1.2.1"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
python-githooks = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
